[package]
name = "mimir_mel"
version = "1.0.0"
edition = "2021"
description = "Mimir Encrypted Launcher (MEL)"
license = "GPL-3.0-only"
repository = "https://github.com/Offline-Program/MEL"
authors = [
    "Michael Clayton <mclayton@redhat.com>",
    "Jared Sprague <jsprague@redhat.com>",
]
publish = false

[[bin]]
name = "mel"
path = "src/main.rs"

[dependencies]
mel_libs = { path = "../mel_libs/" }
tar = "0.4.41"
flate2 = "1.0.33"
url = "2.5"

[build-dependencies]
mel_libs = { path = "../mel_libs/" }
