[package]
name = "mel_libs"
version = "0.1.0"
edition = "2021"
description = "Shared libraries for MEL"
license = "GPLv3"
license-file = "LICENSE"
repository = "https://github.com/Offline-Program/MEL"

[dependencies]
sha2 = "0.10.8"
hex = "0.4.3"
openssl = "0.10.68"
wax = "0.6.0"
serde = { version = "1.0.203", features = ["serde_derive"] }
csv = "1.3.0"
anyhow = "1.0.86"
